--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,3 +95,4 @@ nav:
   - README.md
   - Software Development Methodologies:
     - BDD: software-development-methodologies/BDD.md
+    - TDD: software-development-methodologies/TDD.md
