Add Platform for Enterprise Solutions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,6 +96,7 @@ nav:
   - Introduction:
     - Web Technology Concepts:
       - introduction/enterprise-application-architecture/introduction.md
+      - Platform for Enterprise Solutions: introduction/enterprise-application-architecture/platform-for-enterprise-solutions.md
       - Data Exchange Formats: 
         - introduction/web-technologies-concepts/data-exchange-formats.md
         - Conversion between Data Exchange Formats: introduction/web-technologies-concepts/data-format-conversion.md
