--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,7 +101,8 @@ nav:
         - introduction/web-technologies-concepts/data-exchange-formats.md
         - Conversion between Data Exchange Formats: introduction/web-technologies-concepts/data-format-conversion.md
   - Software Development Methodologies:
-    - AGILE: software-development-methodologies/AGILE.md
-    - AGILE Methodologies : software-development-methodologies/AGILE_METHODOLOGY.md
-    - BDD: software-development-methodologies/BDD.md
-    - TDD: software-development-methodologies/TDD.md
+    - AGILE: 
+      - software-development-methodologies/agile.md
+      - Methodologies : software-development-methodologies/agile-methodologies.md
+    - Test Driven Development (TDD): software-development-methodologies/test-driven-development.md
+    - Behaviour Driven Development (BDD): software-development-methodologies/behaviour-driven-development.md
