--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,6 @@
 name: Create Java notes site with MKDOCS
 on:
   workflow_dispatch:
-    branches:
-      - master
   push:
     branches:
       - master
@@ -14,6 +12,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: 
-          pip install mkdocs mkdocs-material mkdocs-macros-plugin
+      - run: pip install mkdocs mkdocs-material mkdocs-macros-plugin
       - run: mkdocs gh-deploy --force
