Add Client Side Authentication

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,6 +105,7 @@ nav:
     - software-security/introduction.md
     - Basic Attacks: software-security/basic-attacks.md
     - State Based Attacks: software-security/state-based-attacks.md
+    - Client Side Authentication: software-security/client-side-authentication.md
   - Software Development Methodologies:
     - AGILE: 
       - software-development-methodologies/agile.md
