--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -111,7 +111,7 @@ nav:
     - SQL Injection: software-security/sql-injection.md
   - Software Development Methodologies:
     - AGILE: 
-      - software-development-methodologies/agile.md
+      - Principles: software-development-methodologies/agile.md
       - Methodologies : software-development-methodologies/agile-methodologies.md
     - Test Driven Development (TDD): software-development-methodologies/test-driven-development.md
     - Behaviour Driven Development (BDD): software-development-methodologies/behaviour-driven-development.md
