--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,42 @@
+beautifulsoup4==4.10.0
+Brotli==1.0.9
+cffi==1.15.0
+click==8.0.4
+colorama==0.4.4
+cssselect2==0.5.0
+fonttools==4.31.2
+future==0.18.2
+html5lib==1.1
+importlib-metadata==4.11.1
+Jinja2==3.0.3
+joblib==1.1.0
+libsass==0.21.0
+livereload==2.6.3
+lunr==0.5.8
+Markdown==3.3.6
+MarkupSafe==2.1.0
 mkdocs==1.1.2
 mkdocs-macros-plugin==0.5.5
 mkdocs-material==7.1.0
 mkdocs-material-extensions==1.0.1
+mkdocs-with-pdf==0.9.3
+nltk==3.7
+Pillow==9.0.1
+pycparser==2.21
+pydyf==0.1.2
+Pygments==2.11.2
 pymdown-extensions==8.1.1
+pyphen==0.12.0
+python-dateutil==2.8.2
+PyYAML==6.0
+regex==2022.1.18
+six==1.16.0
+soupsieve==2.3.1
+termcolor==1.1.0
+tinycss2==1.1.1
+tornado==6.1
+tqdm==4.62.3
+weasyprint==54.2
+webencodings==0.5.1
+zipp==3.7.0
+zopfli==0.2.1
