--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8.*
-      - run: pip install mkdocs mkdocs-material mkdocs-macros-plugin
+      - run: pip install -r requirements.txt
       - run: mkdocs gh-deploy --force
