--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,3 +140,5 @@ nav:
       - Methodologies : software-development-methodologies/agile-methodologies.md
     - Test Driven Development (TDD): software-development-methodologies/test-driven-development.md
     - Behaviour Driven Development (BDD): software-development-methodologies/behaviour-driven-development.md
+  - Extras:
+    - Abbreviations: extra/abbreviations.md
