--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,4 +140,5 @@ nav:
     - Test Driven Development (TDD): software-development-methodologies/test-driven-development.md
     - Behaviour Driven Development (BDD): software-development-methodologies/behaviour-driven-development.md
   - Extras:
+    - Questions: extra/questions/index.md
     - Abbreviations: extra/abbreviations.md
